@@ -1,5 +1,9 @@
 Zorba - The XQuery Processor
 
+version 2.x
+
+  * Fixed bug #1006166 (disabling 2 functions with the same qname)
+	
 version 2.5
 
 New Features:
